# raceway

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  raceway.service
causeway/: .gitignore  .mcp.json  ARCHITECTURE.md  AUDIT.md  BANKING-DEMO-SCOPE.md  CHANGELOG.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO-SCRIPT.md  DISTRIBUTED.md  DOCUMENTATION-AUDIT-FIXES.md  DONE.md  HOW_TO_RUN.md  INSTRUMENTATION-NEXT-STEPS.md  LAUNCH-CHECKLIST.md  LICENSE  NEXT_STEPS.md  OPTIMIZATIONS.md  PACKAGE-NAMING-ANALYSIS.md  PACKAGE-NAMING-CHANGES.md  PERFORMANCE-FIX.md  PERSISTENCE.md  PROJECT_SUMMARY.md  QUICK-REFERENCE.md  QUICKSTART.md  README.md  REALISTIC_SETUP.md  RELEASE.md  START_HERE.sh  SUCCESS.md  TESTS-NEEDED.md  TEST_IT_NOW.md  TODO.md  TUI-FIX.md  TUI-VALUE.md  check-anomalies.sh  demo-race-condition.js  demo-simple.js  integration-test.js  (+10 more)
causeway/.codex/: config.json
causeway/.github/workflows/: ci.yml  deploy-docs.yml
causeway/ai/: anomaly_detector.py  requirements.txt  test_generator.py
causeway/cli/: Cargo.toml
causeway/cli/src/: main.rs  server.rs
causeway/cli/src/tui/: anomalies_view.rs  audit_trail_view.rs  critical_path.rs  dashboard_view.rs  debugger_view.rs  dependencies_view.rs  distributed_analysis_view.rs  mod.rs  tree_view.rs  types.rs
causeway/core/: Cargo.toml
causeway/core/src/: analysis.rs  cache.rs  capture.rs  config.rs  engine.rs  event.rs  graph.rs  lib.rs  trace.rs
causeway/core/src/storage/: memory.rs  mod.rs  postgres.rs  storage_trait.rs  types.rs
causeway/docs/: INSTRUMENTATION_GUIDE.md  README.md  changelog.md  index.md
causeway/docs/.vitepress/: config.mjs
causeway/docs/api/: analysis.md  overview.md  services.md  traces.md
causeway/docs/guide/: anomalies.md  architecture.md  audit-trails.md  core-concepts.md  critical-path.md  getting-started.md  http-api.md  storage.md  web-ui.md
causeway/docs/sdks/: go.md  overview.md  python.md  rust.md
causeway/examples/: async-debugging-demo.ts  race-condition-demo.ts
causeway/examples/distributed/: ENHANCED-INSTRUMENTATION.md  README.md  stop-services.sh  test.sh
causeway/examples/distributed/patterns/: full-chain.sh  linear.sh
causeway/examples/express-banking/: README.md  generate-test-data.js  index.js  package-lock.json  package.json  test-race.js
causeway/examples/go-banking/: README.md  go.mod  main.go
causeway/examples/go-banking/public/: index.html
causeway/examples/python-banking/: README.md  app.py
causeway/examples/python-banking/public/: index.html
causeway/examples/rust-banking/: Cargo.toml  README.md
causeway/examples/rust-banking/public/: index.html
causeway/examples/rust-banking/src/: main.rs
causeway/instrumentation/: package.json
causeway/instrumentation/src/: index.ts  runtime.ts  transformer.ts
causeway/migrations/postgres/: 001_initial_schema.sql  002_add_performance_indexes.sql
causeway/raceway-test/src/: fixtures.rs
causeway/raceway-test/tests/: api.rs  distributed.rs
causeway/scripts/: clean-artifacts.sh
causeway/sdk/typescript/: README.md  package.json
causeway/sdk/typescript/babel-plugin/: README.md  package.json
causeway/sdk/typescript/cli/: package.json
causeway/sdk/typescript/src/: causeway.ts  client.ts  index.ts  types.ts
causeway/sdks/go/: CONTRIBUTING.md  README.md  client.go  context.go  go.mod  middleware.go  middleware_test.go  raceway.go  types.go
causeway/sdks/go/examples/: lock_helpers_example.go
causeway/sdks/go/raceway/: client.go  client_test.go  context.go  trace_context.go  trace_context_test.go  types.go
causeway/sdks/python/: CONTRIBUTING.md  DECORATOR-GUIDE.md  README.md  pyproject.toml  setup.py
causeway/sdks/python/raceway/: __init__.py  client.py  context.py  decorators.py  lock_helpers.py  middleware.py  trace_context.py  types.py
causeway/sdks/python/tests/: __init__.py  test_trace_context.py
causeway/sdks/rust/: CONTRIBUTING.md  Cargo.toml  README.md
causeway/sdks/rust/examples/: lock_helpers.rs
causeway/sdks/rust/src/: client.rs  context.rs  lib.rs  lock_helpers.rs  trace_context.rs  types.rs
causeway/sdks/typescript/: CONTRIBUTING.md  INSTRUMENTATION-GUIDE.md  LICENSE  PUBLISHING-CHECKLIST.md  README.md  RELEASE-NOTES.md  SDK-REVIEW.md  package-lock.json  package.json
causeway/sdks/typescript/babel-plugin/: README.md  jest.config.js  package.json
causeway/sdks/typescript/cli/: package.json
causeway/sdks/typescript/src/: auto-track.ts  client.ts  core-tracking.test.ts  index.ts  lock-helpers.test.ts  middleware.test.ts  proxy-tracking.test.ts  raceway.ts  runtime.test.ts  runtime.ts  trace-context.test.ts  trace-context.ts  types.ts
causeway/web/: BACKEND_OPTIMIZATION_ANALYSIS.md  index.html  package-lock.json  package.json  vite.config.ts
causeway/web/src/: App-old.tsx  App.css  App.tsx  api.ts  config.ts  main.tsx  types.ts
causeway/web/src/components/: AlertBanner.tsx  AnomaliesTab.tsx  AnomaliesView.tsx  AuditTrailView.tsx  CriticalPathView.tsx  Dashboard.tsx  DashboardStats.tsx  DependenciesView.tsx  DistributedAnalysisView.tsx  EmptyState.tsx  EventDetails.tsx  EventKindBadge.tsx  EventTypeChart.tsx  EventsTabWithSwitcher.tsx  EventsView.tsx  ExportMenu.tsx  GlobalRaces.tsx  LoadingState.tsx  LockContentionView.tsx  OverviewTab.tsx  RaceConditions.tsx  SearchFilter.tsx  ServiceBadge.tsx  ServiceDependencies.tsx  ServiceDependencyGraph.tsx  ServiceGraph.tsx  ServiceLink.tsx  ServiceList.tsx  ServiceOverview.tsx  ServiceTimelineView.tsx  ServiceTraces.tsx  Services.tsx  StateSnapshot.tsx  SystemHealth.tsx  SystemHotspots.tsx  SystemPerformance.tsx  TimelineScrubber.tsx  TimelineView.tsx  (+8 more)
core/: Cargo.toml
core/migrations/postgres/: 003_distributed_tracing.sql
core/src/: analysis.rs  capture.rs  config.rs  engine.rs  graph.rs
core/src/storage/: memory.rs  postgres.rs  storage_trait.rs
raceway-test/: Cargo.toml
raceway-test/src/: fixtures.rs  harness.rs
raceway-test/tests/: e2e.rs
sdks/rust/: CONTRIBUTING.md  Cargo.toml  README.md
sdks/rust/src/: client.rs  lock_helpers.rs  trace_context.rs  types.rs
(+169 files in other folders)
