[package]
name = "raceway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
petgraph.workspace = true
crossbeam.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
async-trait = "0.1"
futures = "0.3"
itertools = "0.13"
lru.workspace = true
