[package]
name = "raceway-test"
version = "0.1.0"
edition = "2021"

[dependencies]
raceway = { path = "../cli" }
raceway-core = { path = "../core" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.7", default-features = false, features = ["macros", "http1", "json"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
