[package]
name = "raceway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "raceway"
path = "src/lib.rs"

[[bin]]
name = "raceway"
path = "src/main.rs"

[dependencies]
raceway-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
tui-textarea = "0.4"
chrono.workspace = true
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
