[package]
name = "raceway"
version = "0.1.0"
edition = "2021"
authors = ["Raceway Contributors"]
description = "Official Rust SDK for Raceway - race condition detection and distributed tracing"
license = "MIT"
repository = "https://github.com/mode7labs/raceway"
homepage = "https://mode7labs.github.io/raceway"
documentation = "https://mode7labs.github.io/raceway/sdks/rust"
readme = "README.md"
keywords = ["tracing", "instrumentation", "race-detection", "concurrency", "debugging"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[workspace]
# This is a standalone package, not part of the parent workspace

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
parking_lot = "0.12"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
