[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raceway"
version = "0.1.0"
description = "Python SDK for Raceway - race condition detection and distributed tracing"
readme = "README.md"
authors = [
    {name = "Raceway Contributors", email = "hello@raceway.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
]

keywords = ["race-conditions", "concurrency", "distributed-tracing", "monitoring", "debugging", "instrumentation"]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
flask = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.95.0", "starlette>=0.26.0"]
web = ["flask>=2.0.0", "fastapi>=0.95.0", "starlette>=0.26.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "flask>=2.0.0",
    "fastapi>=0.95.0",
    "starlette>=0.26.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mode7labs/raceway"
Documentation = "https://github.com/mode7labs/raceway/tree/main/sdks/python"
Repository = "https://github.com/mode7labs/raceway"
"Bug Tracker" = "https://github.com/mode7labs/raceway/issues"
Changelog = "https://github.com/mode7labs/raceway/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["raceway*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings -ra"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "middleware: Middleware tests",
    "slow: Slow-running tests",
    "asyncio: Async tests",
]
minversion = "3.8"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.coverage.run]
source = ["raceway"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
